src/test/deca/context/invalid/invalidmethodcall.deca
class A{
    int a; 
    void f(A x){

    }
}
class C{

}
class B extends A{
    void g(){
        B b = new B();
        A a = new A();
        C c = new C();
        c.f(b);
    }
}